Closed Bug 373077 Opened 19 years ago Closed 19 years ago

getTextAtOffset returns bad text, start, end offsets for list items

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: parente, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression)

Attachments

(2 files)

Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a3pre) Gecko/20070307 Minefield/3.0a3pre Note: This was not a bug prior to the 20070307 build. It worked fine yesterday. 1) See attached HTML page. 2) Use AT-SPI's getTextAtOffset on the first list item. Return value is empty string, start offset = 0, end offset = 0. 3) Use AT-SPI's getText(0, -1). Return value is '<bullet> <embed>' (where <embed> represents the link). getTextAtOffset should be returning the same thing as getText in this case since all of the text fits on one visible line.
Blocks: texta11y
Keywords: access
Keywords: regression
Summary: getTextAtOffset returns bad text, start, end offsets → getTextAtOffset returns bad text, start, end offsets for list items
Attached file test case
Problem still exists in 2007-03-12 build after fix to caret events.
Getting list item bullets to work properly with out hypertext implementation will be hard. But, this should be okay for now. Surkov, will you approve a temporary fix like this? It basically puts us back where we were before, ignoring error conditions when PeekOffset() failed when going backwards starting at the bullet frame.
Attachment #258380 - Flags: review?(surkov.alexander)
Attachment #258380 - Flags: review?(surkov.alexander) → review+
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Aaron, can you file a bug for this where problem will be described and where will be presented possible approach to fix it?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: