Bug 373077. getTextAtOffset() failing when there are list bullet frames involved. r=parente